[package]
name = "mike_rust"
version = "0.1.0"
authors = ["Chubak Bidpaa <chubakbidpaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12.0"
select = "0.5.0"
fantoccini = "0.14.0"
libxml = "0.2.14"
google-sheets4 = "*"
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "*"
serde_json = "*"
yup-oauth2 = "^1.0"
google-bigquerydatatransfer1 = "*"
google-bigquery2 = "*"
google-customsearch1 = "*"
odbc = "0.17.0"
env_logger = "0.7.1"
tiberius = "0.4.8"
async-std = "1.6.3"
regex = "1"
itertools = "0.9.0"